Minor boolean fixes
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@1851 37aeb1de-b14b-0410-9a0e-82b28170d228